8347040: C2: assert(!loop->_body.contains(in)) failed

Reviewed-by: chagedorn, kvn